fixed ron bug#2: crazy alignment on retainee>edit

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -250,6 +250,10 @@ table#nonRetainedPlayers tr:hover {
 	background-color: silver;
 }
 
+table#nonRetainedPlayers {
+	text-align: center;
+}
+
 /* Draft */
 
 div#draft_live {
